# rubus-engine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: example.cmake  glm.cmake  rubus-ecs.cmake  rubus-gui.cmake  stb.cmake
example/: components.hpp  game_object.hpp  main.cpp
example/game/: components.hpp  data.cpp  data.hpp
example/scenes/: character_selection_menu.hpp  game.hpp  main_menu.hpp  scene.hpp
shaders/sprite/: frag.glsl  vert.glsl
src/rubus-engine/app/: app.cpp  app.hpp
src/rubus-engine/game/: game.cpp  game.hpp  game_object.cpp  game_object.hpp  resource.cpp  resource.hpp  scene.cpp  scene.hpp
src/rubus-engine/graphics/: graphics.cpp  graphics.hpp
src/rubus-engine/utils/: utils.cpp  utils.hpp
